# MyCode

./: .gitignore
Branch/: Branch-Bound.py  NEH.py  s-batch.py
NLP_test/: demo2_词性标注.py  demo3_编码.py  main.py
PyTorch/: evaluate.py  predict.py  train.py
PyTorch/.claude/: settings.local.json
PyTorch/artifacts/auto_compare/compare/: summary.json
PyTorch/artifacts/auto_compare/preprocess_off/: history.json  metrics.json  train_meta.json
PyTorch/artifacts/auto_compare/preprocess_on/: history.json  metrics.json  train_meta.json
PyTorch/artifacts/model_compare/: history.json  metrics.json  train_meta.json
PyTorch/data/: test.txt  train.txt  val.txt
PyTorch/src/: dataset.py  model.py
my robot/: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
my robot/.claude/: settings.local.json
my robot/control/: gripper.py  ik_solver.py
my robot/docs/: DEPENDENCIES.md  PROGRESS.md  PROJECT.md  TEST_PLAN.md
my robot/perception/: camera.py
my robot/scripts/: run_tests.py  sensor_check.py  teleop.py
my robot/simulation/: mujoco_env.py
my robot/simulation/assets/ur5e/: scene.xml
my robot/tests/: conftest.py
my robot/tests/e2e/phase0/: test_sensor_stream.py  test_teleop.py
my robot/tests/simulation/: test_robot_model.py
my robot/tests/unit/control/: test_ik_solver.py
nanoGPT-master/: model.py  nanoGPT_architecture_analysis.md  sample.py  train.py
nanoGPT-master/.claude/: settings.local.json
nanoGPT-master/config/: train_robot_instr.py
nanoGPT-master/data/robot_instr/: input.txt  prepare.py  预处理解析.md
nanoGPT-master/out-robot-instr/: eval_results.json  training_metrics.npz
nanoGPT-master/test/: experiment_report.tex  实验报告.md  模型架构.md  训练架构分析.md  预处理解析.md
test/: RTX3050Laptop-深度学习项目复现指南.md  test.py
算法/: 2025003026_刘彪.py  2025003026_刘彪.rar
算法/2025003026_刘彪/: 0-1 背包问题.py  最大子段和.py  最长公共子序列.py
