[project]
name = "my-robot"
version = "0.1.0"
description = "具身智能仿真机械臂系统 — Embodied Intelligent Robot Arm Simulation"
requires-python = ">=3.10"
readme = "docs/PROJECT.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.6",
    "pytest-timeout>=2.3",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.1.0",
]

# ---- Ruff (lint + format) ----
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",                           # line too long (handled by formatter)
    "B008",                           # do not perform function calls in argument defaults
    "SIM108",                         # use ternary operator (not always clearer)
]
exclude = [".git", ".venv", "__pycache__", ".mypy_cache"]

[tool.ruff.lint.isort]
known-first-party = ["control", "perception", "simulation", "scripts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ---- MyPy ----
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["tests/"]

# ---- Pytest ----
[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-v", "--tb=short", "--strict-markers", "--strict-config"]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU",
    "e2e: end-to-end scenario tests",
]
